<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY title "Self Driving Car"><!ENTITY company "Group 10">]>

<resources>
  <string name="app_name">Group10App</string>
  <string name="title">&title;</string>
  <string name="company_name">&company;</string>

  <!--Homepage-->
  <string name="tagLine">The experience of a lifetime</string>
  <string name="button_auto_homepage">Autonomous Mode</string>
  <string name="button_manual_homepage">Manual Mode</string>
  <string name="github_button_content_desc">Link to project repository on Github</string>
  <!--Credits-->
  <string name="credits">Credits</string>
  <string name="carPictureCredit">Icon made by Freepik from www.flaticon.com</string>
  <string name="joystickCredit">Joystick from github.com/controlwear/virtual-joystick-android</string>
  <!--Instructions-->
  <string name="instructions">Instructions</string>
  <string name="i1">This app allows you to use the car in two different ways. Choose autonomous mode to experience a self driving car and manual mode to freely control it.</string>
  <string name="i2">\'AUTONOMOUS MODE\'</string>
  <string name="i3">In this setting, the car will drive around freely, avoiding any obstacles in its path.</string>
  <string name="i4">\'AUTONOMOUS DRIVE\' - the car will start driving around.</string>
  <string name="i5">\'TRIANGLE\' - the car will drive itself in a triangle shape.</string>
  <string name="i6">\'LINE FOLLOWING\' - the car will follow a line on the ground, ensuring it is always centred.</string>
  <string name="i7">\'MANUAL MODE\'</string>
  <string name="i8">Use the seek bar to control speed, based on five pre-made settings.</string>
  <string name="i9">Move forward, backward, left and right by pressing and holding the arrows.</string>
  <string name="i10">For a different experience, make use of the joystick by clicking \'JOYSTICK MODE\'.</string>
  <string name="i11">If you need to reconnect to the arduino, click the \'CONNECT TO CAR\' button on the app.</string>

  <!--Both modes-->
  <string name="current_status">Current status:</string>
  <string name="initial_status">stopped</string>
  <string name="start">start</string>
  <string name="stop">stop</string>
  <string name="current_speed">current speed (m/s):</string>
  <string name="distance_travelled">distance travelled (m):</string>

  <!--Autonomous mode-->
  <string name="auto_mode">Autonomous Mode</string>

  <!--Manual mode-->
  <string name="manual_mode">Manual Mode</string>
  <string name="joystick_mode">Joystick Mode</string>

  <!--Footer-->
  <string name="footer">&company; | &title;</string>
  <string name="githubUrl">https://github.com/DIT112-V19/group-10</string>
  <string name="unknown_device">Unknown Device</string>
  <string name="title_devices">Self Driving Car</string>

  <string name="action_settings">Settings</string>
  <string name="Text">BT Status:</string>
  <string name="on">Turn On</string>
  <string name="off">Turn Off</string>
  <string name="List">List paired Devices</string>
  <string name="connect_to_car">CONNECT TO CAR</string>
  <string name="device_name">Device Name:</string>
  <string name="device_address">Address:</string>
  <string name="device_state">Status:</string>
  <string name="device_disconnected">Connected</string>
  <string name="title_activity_joystick">Joystick</string>

</resources>
