<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="300dp"
  android:layout_height="450dp"
  android:background="@color/colorBackgroundLight"
  >

  <TextView
    android:id="@+id/textView3"
    style="@style/heading"
    android:layout_width="266dp"
    android:layout_height="59dp"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="188dp"
    android:text="@string/instructions"
    android:textStyle="bold"
    android:textColor="@color/textColorDark"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/close"
    style="@style/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginStart="136dp"
    android:layout_marginTop="243dp"
    android:layout_marginEnd="130dp"
    android:layout_marginBottom="16dp"
    android:focusable="true"
    android:gravity="center"
    android:paddingTop="10dp"
    android:text="close"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView5"
    app:layout_constraintVertical_bias="1.0" />

  <ScrollView
    android:layout_width="300dp"
    android:layout_height="354dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    app:layout_constraintBottom_toTopOf="@+id/close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView3">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingLeft="5dp"
      android:paddingRight="5dp">

      <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i1" />

      <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

      <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:textStyle="bold"
        android:text="@string/i2" />

      <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i3" />

      <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i4" />

      <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i5" />

      <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i6" />

      <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

      <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:textStyle="bold"
        android:text="@string/i7" />

      <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i8" />

      <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i9" />

      <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i10" />

      <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="?android:attr/listDivider" />

      <TextView
        android:id="@+id/textView16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text"
        android:text="@string/i11" />
    </LinearLayout>
  </ScrollView>

</android.support.constraint.ConstraintLayout>