<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".BluetoothConnect" >

  <TextView
    android:id="@+id/text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/Text" />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="30dp" >

    <Button
      android:id="@+id/turnOn"
      android:layout_width="142dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="50dp"
      android:text="@string/on" />

    <Button
      android:id="@+id/turnOff"
      android:layout_width="152dp"
      android:layout_height="wrap_content"
      android:text="@string/off" />

  </LinearLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="80dp" >

    <Button
      android:id="@+id/paired"
      android:layout_width="380dp"
      android:layout_height="match_parent"
      android:layout_marginLeft="10dp"
      android:text="@string/List" />

    <ListView
      android:id="@+id/listView1"
      android:layout_width="fill_parent"
      android:layout_height="200dp" >

    </ListView>

  </LinearLayout>

</RelativeLayout>