<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundDark"
    tools:context=".MainActivity">

  <ImageView
    android:id="@+id/lightBackground"
    android:layout_width="0dp"
    android:layout_height="386dp"
    android:layout_marginStart="32dp"
    android:layout_marginTop="200dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="80dp"
    android:width="100dp"
    android:height="100dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="1.0"
    app:srcCompat="@drawable/round_rectangle_shape"
    tools:ignore="ContentDescription" />

  <ImageView
    android:id="@+id/carLogo"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="150dp"
    app:layout_constraintBottom_toTopOf="@+id/lightBackground"
    app:layout_constraintEnd_toEndOf="@+id/lightBackground"
    app:layout_constraintStart_toStartOf="@+id/lightBackground"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/taxi"
    tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/github"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/github_button_content_desc"
        android:focusable="true"
        android:onClick="openRepo"
        android:tint="@color/colorBackgroundLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightBackground"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/github" />

  <Button
    android:id="@+id/buttonAutoHomepage"
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="28dp"
    android:backgroundTint="@color/buttonColorBlue"
    android:onClick="openAutoMode"
    android:text="@string/button_auto_homepage"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="@+id/lightBackground"
    app:layout_constraintHorizontal_bias="0.592"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/button2" />

  <Button
    android:id="@+id/buttonManualHomepage"
    android:layout_width="200dp"
    android:layout_height="70dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="28dp"
    android:backgroundTint="@color/buttonColorPurple"
    android:onClick="openManualMode"
    android:text="@string/button_manual_homepage"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonAutoHomepage" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="86dp"
        android:layout_marginLeft="86dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/credits"
      android:focusable="true"
      android:onClick="openCredits"
        android:textColor="@color/textColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/github"
        app:layout_constraintTop_toBottomOf="@+id/lightBackground" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="19dp"
        android:text="@string/instructions"
      android:focusable="true"
      android:onClick="openInstructions"
        android:textColor="@color/textColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lightBackground" />

  <Button
    android:id="@+id/button2"
    android:layout_width="191dp"
    android:layout_height="64dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="28dp"
    android:onClick="openDeviceScan"
    android:text="@string/connect_to_car"
    android:gravity="center"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/carLogo" />

  <TextView
    android:id="@+id/textView"
    style="@style/heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="50dp"
    android:text="@string/company_name"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/textView2"
    style="@style/heading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    android:text="@string/title"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <LinearLayout
    android:layout_width="341dp"
    android:layout_height="86dp"
    android:layout_marginBottom="44dp"
    android:orientation="vertical"
    android:padding="15dp"
    android:weightSum="1"
    app:layout_constraintBottom_toTopOf="@+id/github"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.463"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
      android:id="@+id/linearLayout0"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"

      app:layout_constraintBottom_toTopOf="@+id/carLogo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <Space
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name"
        android:textColor="@color/textColorDark" />

      <TextView
        android:id="@+id/device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorDark" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/linearLayout1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"


      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/carLogo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <Space
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/device_address"
        android:textColor="@color/textColorDark" />

      <TextView
        android:id="@+id/device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorDark" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/linearLayout3"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/linearLayout0"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_state"
        android:textColor="@color/textColorDark" />

      <Space
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

      <TextView
        android:id="@+id/connection_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_disconnected"
        android:textColor="@color/textColorDark" />
    </LinearLayout>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>