<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-bluetooth"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackgroundDark"
  tools:context=".DeviceList" >

  <TextView
    android:id="@+id/status_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    style="@style/heading"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="20dp"
     />

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:gravity="center"
    android:orientation="horizontal">

    <Button
      android:id="@+id/turnOn"
      android:layout_width="152dp"
      android:layout_height="wrap_content"
      android:layout_marginRight="10dp"
      android:layout_marginBottom="10dp"
      android:background="@color/buttonColorMain"
      android:text="@string/on"
      android:textColor="@color/textColorLight" />

    <Button
      android:id="@+id/turnOff"
      android:layout_width="152dp"
      android:layout_height="wrap_content"
      android:layout_marginLeft="10dp"
      android:layout_marginBottom="10dp"
      android:background="@color/buttonColorMain"
      android:text="@string/off"
      android:textColor="@color/textColorLight" />

  </LinearLayout>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:layout_marginTop="80dp" >

    <Button
      android:id="@+id/get_paired_devices"
      android:layout_width="326dp"
      android:layout_height="match_parent"

      android:layout_centerHorizontal="true"

      android:background="@color/buttonColorMain"
      android:onClick="getPairedDevices"
      android:text="@string/List"
      android:textColor="@color/textColorLight" />

    <ListView
      android:id="@+id/listView"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    </ListView>

  </LinearLayout>



</RelativeLayout>